<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UNIT_Blikkenvullijn_STS" Id="{d10a0d64-2944-4e08-9475-9637c81b822a}">
    <Declaration><![CDATA[TYPE UNIT_Blikkenvullijn_STS :
STRUCT
	State 			: E_State_PackML;
	Auto 			: BOOL;
	Manueel 		: BOOL;
	Starting_SC 	: BOOL;
	Execute_SC 		: BOOL;
	Resetting_SC 	: BOOL;
	Holding_SC 		: BOOL;
	Unholding_SC 	: BOOL;
	Suspending_SC	: BOOL;
	Unsuspending_SC	: BOOL;
	Aborting_SC		: BOOL;
	Clearing_SC		: BOOL;
	Stopping_SC		: BOOL;
	Completing_SC	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>